@@ -3,6 +3,7 @@
 o Add opam file in-source
 o Cope with more malformed bookmarks
 o Remember and reapply inline image decode parameters
+o Pdfimage extracts and stores JBIG2Globals
 
 2.6 (July 2023)
 
